--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "vite dev --host 0.0.0.0",
 		"build": "vite build",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
@@ -20,6 +20,7 @@
 		"@sveltejs/kit": "^2.43.2",
 		"@sveltejs/vite-plugin-svelte": "^6.2.0",
 		"@tailwindcss/vite": "^4.1.13",
+		"@types/better-sqlite3": "^7.6.13",
 		"@types/node": "^22",
 		"daisyui": "^5.3.7",
 		"eslint": "^9.36.0",
@@ -38,6 +39,7 @@
 	},
 	"dependencies": {
 		"@humanspeak/svelte-keyed": "^5.0.1",
+		"better-sqlite3": "^12.5.0",
 		"svelecte": "^5.3.0"
 	}
 }
